--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,5 @@
 [build]
-  publish = "public"
-  command = "npm run build"
+publish = "public"
+command = "npm run build"
 [build.environment]
-  NODE_VERSION = "14.15.0"
-  YARN_VERSION = "1.22.4"
-  YARN_FLAGS = "--no-ignore-optional"
-
-
+  NODE_OPTIONS = "--max_old_space_size=8192"
